Fixed z-index to lower values for css

--- a/tachyon/ui/static/tachyon.ui/tachyon.css
+++ b/tachyon/ui/static/tachyon.ui/tachyon.css
@@ -29,7 +29,7 @@ div.locked {
     background-color: #000000;
     overflow: hidden;
     position: fixed;
-    z-index: 1050;
+    z-index: 1003;
     top: 0;
     left: 0;
     height: 100%;
@@ -47,7 +47,7 @@ div.window {
     width: 80%;
     height: auto; 
     background-color: #FFFFFF;
-    z-index: 1060;
+    z-index: 1004;
     overflow: auto;
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 6px;
